--- a/index.html
+++ b/index.html
@@ -6,9 +6,61 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/x-icon" href="/favicon.png" />
 		<title>classes and stuff</title>
+		<!-- Compiled and minified CSS -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+
+		<!-- Compiled and minified JavaScript -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+		<!-- Google Materalize fonts -->
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="./css/custom.css" />
 	</head>
 	<body>
 		<body>
+			<div class="card pink lighten-1">
+				<div class="card-image waves-effect waves-block waves-light">
+					<img
+						class="activator"
+						src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+				</div>
+				<div class="card-content">
+					<span class="card-title activator white-text text-darken-4"
+						>User Name<i class="material-icons right">more_vert</i></span
+					>
+				</div>
+				<div class="card-reveal pink lighten-1">
+					<span class="card-title white-text text-darken-4"
+						>User Names<i class="material-icons right">close</i></span
+					>
+					<ul class="collection">
+						<li class="white-text collection-item pink lighten-1">
+							<span class="material-icons"> person </span>Amalia
+						</li>
+						<li class="white-text collection-item purple lighten-1">
+							<span class="material-icons"> call </span>Phone
+						</li>
+						<li class="white-text collection-item pink lighten-1">
+							<span class="material-icons"> alternate_email </span>
+							emaéilàdflkfj.nbj
+						</li>
+						<li class="white-text collection-item purple lighten-1">
+							<span class="material-icons"> language </span> website.com
+						</li>
+						<li class="white-text collection-item pink lighten-1">
+							<span class="material-icons"> apartment </span> company / company
+							stuff
+						</li>
+						<li class="white-text collection-item purple lighten-1">
+							<span class="material-icons"> apartment </span> website.com
+						</li>
+					</ul>
+				</div>
+			</div>
 			<div id="app"></div>
 			<script src="./scripts/pages/index.js" type="module"></script>
 		</body>
