--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<!-- Compiled and minified CSS -->
 		<link
 			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+		/>
 
 		<!-- Compiled and minified JavaScript -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -17,7 +18,8 @@
 		<!-- Google Materalize fonts -->
 		<link
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
-			rel="stylesheet" />
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./css/custom.css" />
 	</head>
 	<body>
@@ -30,7 +32,8 @@
 						<div class="card-image waves-effect waves-block waves-light">
 							<img
 								class="activator"
-								src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+								src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+							/>
 						</div>
 						<div class="card-content">
 							<span class="card-title activator white-text"
@@ -38,7 +41,7 @@
 							>
 						</div>
 						<div class="card-reveal pink lighten-1">
-							<span class="card-title white-text text-darken-4"
+							<span class="card-title white-text"
 								>User Names<i class="material-icons right">close</i></span
 							>
 							<ul class="collection">
