--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<!-- Compiled and minified CSS -->
 		<link
 			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		/>
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
 		<!-- Compiled and minified JavaScript -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -18,12 +17,12 @@
 		<!-- Google Materalize fonts -->
 		<link
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
-			rel="stylesheet"
-		/>
+			rel="stylesheet" />
 		<link rel="stylesheet" href="./css/custom.css" />
 	</head>
 	<body>
 		<body>
+			<!--- 
 			<section class="group">
 				<h2>Group Members</h2>
 
@@ -70,6 +69,7 @@
 					</div>
 				</article>
 			</section>
+			-->
 			<div id="app"></div>
 			<script src="./scripts/pages/index.js" type="module"></script>
 		</body>
